trunk/yanl/examples/t1/correct/0401_if_else_if_else.yanl
program me;
var a:integer;
begin 
if true then 
    a:=1 
else 
    if true then 
       a:=2 
    else 
       a:=3;
end.
